# another-webapp-example

./: README.md  docker-compose.local.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run-api.sh
backend/src/song_backend/: app_config_loader.py  app_container.py
backend/src/song_backend/base/exception/: exception_type.py  exceptions.py
backend/src/song_backend/base/sql/: abstract_sql_adapter.py  base_sql_entity.py
backend/src/song_backend/business/song/: song_service.py
backend/src/song_backend/business/song/lyrics/: lyrics_command.py  lyrics_search_acl_adapter.py  lyrics_search_result.py
backend/src/song_backend/business/song/lyrics/impl/: lyrics_search_acl_dummy_adapter.py  lyrics_search_acl_musixmatch_adapter.py
backend/src/song_backend/business/song/lyrics_analyser/: lyrics_analyser_acl_adapter.py  lyrics_analyser_command.py  lyrics_analyser_result.py
backend/src/song_backend/business/song/lyrics_analyser/impl/: lyrics_analyser_acl_dummy_adapter.py
backend/src/song_backend/business/song/lyrics_analyser/impl/openai/: lyrics_analyser_acl_openai_adapter.py  openai_prompts.py
backend/src/song_backend/business/song/model/: command.py  lyrics.py  song.py
backend/src/song_backend/business/song/storage/: lyrics_storage_adapter.py  song_storage_adapter.py
backend/src/song_backend/business/song/storage/dummy/: lyrics_storage_dummy_adapter.py  song_storage_dummy_adapter.py
backend/src/song_backend/business/song/storage/sql/: lyrics_storage_adapter.py  song_entity.py  song_storage_sql_adapter.py
backend/src/song_backend_rest/: main.py  run_api.py
backend/src/song_backend_rest/config/: app_rest_config.py
backend/src/song_backend_rest/dependencies/: core_dependencies.py
backend/src/song_backend_rest/endpoints/: hello_router.py  song_router.py
backend/src/song_backend_rest/exception/: exception_handler.py
backend/src/song_backend_rest/model/: song.py
db/: demo.xml  liquibase-local.properties  migrate-local.sh
db/sql/00.00.00-initial/: 00.00.00-001-song_tables.ddl.sql
frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json  proxy.conf.json
frontend/docker/: nginx-default.conf
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.spec.ts  (+3 more)
(+34 files in other folders)
